Fix footer background on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -846,7 +846,6 @@ ol {
     display: none;
   }
 }
-
 .services__button--prev {
   left: 4px;
 }
@@ -1176,7 +1175,11 @@ ol {
   min-height: auto;
   overflow: hidden;
   padding: 32px 0 48px;
-  background: #011f4a;
+  background-color: #011c44;
+  background-image: url("../images/footer-background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   border: 2px solid #011f4a;
   color: #ffffff;
   text-align: center;
@@ -1601,7 +1604,6 @@ ol {
     display: none;
   }
 }
-
 .services__pagination {
   top: 456px;
   left: 50%;
