--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -3,7 +3,11 @@
   min-height: auto;
   overflow: hidden;
   padding: 32px 0 48px;
-  background: #011f4a;
+  background-color: #011c44;
+  background-image: url("../images/footer-background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   border: 2px solid #011f4a;
   color: #ffffff;
   text-align: center;
